[project]
name = "aliased-images"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "folium>=0.20.0",
    "geojson>=3.2.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
